created services section for index.html, styled it as well

--- a/index.html
+++ b/index.html
@@ -78,7 +78,118 @@
 
         <div class="container">
 
+            <div class="row mb-3">
 
+                <div class="col-12 section-intro text-center">
+                    <h1>Our <span>Services</span></h1>
+
+                    <div class="divider"></div>
+
+                    <p class="mt-3 lead">As a Frontend Developer, I offer a plethora of skills which I bring to the job market. <br> These skills include and not limited to the following:</p>
+
+                </div>
+
+            </div>
+
+            <div class="row pb-5 g-4 text-start" style="background-color: white">
+
+                <div class="col-md-4">
+
+                    <div class="servcies text-center p-4">
+
+                        <div class="service p-3">
+
+                            <i class="fa-solid fa-code"></i>
+                            <div class="skill"><h4>Coding</h4></div>
+
+                        </div>
+                        <p>My coding skills include HTML, CSS, JavaScript and Framework languages such as Bootstrap 5 and jQuery</p>
+
+                    </div>
+
+                </div>
+
+                <div class="col-md-4">
+
+                    <div class="servcies text-center p-4">
+
+                        <div class="service p-3">
+
+                            <i class="fa-solid fa-mobile"></i>
+                            <div class="skill"><h4>Mobile First Responsive Design</h4></div>
+
+                        </div>
+                        <p>When I am created Websites, I design for the smart phone first and move on to tablets and eventually desktops</p>
+
+                    </div>
+
+                </div>
+
+                <div class="col-md-4">
+
+                    <div class="servcies text-center p-4">
+
+                        <div class="service p-3">
+
+                            <i class="fa-solid fa-desktop"></i>
+                            <div class="skill"><h4>Website Design</h4></div>
+
+                        </div>
+                        <p>I also design websites for clients</p>
+
+                    </div>
+
+                </div>
+
+                <div class="col-md-4">
+
+                    <div class="servcies text-center p-4">
+
+                        <div class="service p-3">
+
+                            <i class="fa-brands fa-wordpress"></i>
+                            <div class="skill"><h4>WordPress Developer</h4></div>
+
+                        </div>
+                        <p>On top of my coding skills, I also know how to develop websites on wordPress</p>
+
+                    </div>
+
+                </div>
+
+                <div class="col-md-4">
+
+                    <div class="servcies text-center p-4">
+
+                        <div class="service p-3">
+
+                            <i class="fa-solid fa-pencil"></i>
+                            <div class="skill"><h4>Sketch Art</h4></div>
+
+                        </div>
+                        <p>I also offer hand drawn art if my client requires such skill for their business purposes</p>
+
+                    </div>
+
+                </div>
+
+                <div class="col-md-4">
+
+                    <div class="servcies text-center p-4">
+
+                        <div class="service p-3">
+
+                            <i class="fa-solid fa-globe"></i>
+                            <div class="skill"><h4>Website Deployment</h4></div>
+
+                        </div>
+                        <p>I can also deploy website onto the internet if my client requires a wholistic approach rather than just the design of a website.</p>
+
+                    </div>
+
+                </div>
+
+            </div>
 
         </div>
 
