--- a/info.html
+++ b/info.html
@@ -34,6 +34,9 @@
                     <li class="nav-item">
                         <a href="#bio" class="nav-link">Bio</a>
                     </li>
+                    <li class="nav-item">
+                        <a href="#contact" class="nav-link">Contact Me</a>
+                    </li>
                 </ul>
 
                 <a href="index.html" class="btn btn-nav ms-4">Asa Site</a>
@@ -74,7 +77,7 @@
 
         <div class="container">
 
-            
+
 
         </div>
 
