created and styled the bio section for the info html document

--- a/info.html
+++ b/info.html
@@ -35,6 +35,9 @@
                         <a href="#bio" class="nav-link">Bio</a>
                     </li>
                     <li class="nav-item">
+                        <a href="#skill" class="nav-link">Skills</a>
+                    </li>
+                    <li class="nav-item">
                         <a href="#contact" class="nav-link">Contact Me</a>
                     </li>
                 </ul>
@@ -72,19 +75,61 @@
 
 
     <!--Bio Section-->
+    <section id="bio" class="bg-cover min-vh-100" style="background-image:url('.//media//20220906_150244.jpg')">
 
-    <section id="bio" class="min-vh-100  bg-dark">
+        <div class="overlay"></div>
 
         <div class="container">
 
             <div class="row mb-3">
 
                 <div class="col-12 section-intro text-center">
-                    <h1 class="text-white">Indepth <span>Profile</span></h1>
+                    <h1><span>About</span> Me</h1>
 
                     <div class="divider"></div>
 
-                    <p class="mt-3 lead">As a Frontend Developer, I offer a plethora of skills which I bring to the job market. <br> These skills include and not limited to the following:</p>
+                    <h3 class="mt-3 lead text-black">Below will be a indepth bio of the skills and servcies I will bring as <br> Frontend Developer</h3>
+
+                </div>
+
+            </div>
+
+            <div class="row mt-4 mb-3">
+
+                <div class="col-12 bio-content">
+
+                    <h4 class="text-center">Profile Synopsis</h4>
+                    <p class="lead mt-3 mb-5">I am a multilingual, detail-oriented worker with both formal and informal employment experience. Versatile skill set with experience in software engineering, customer service, sales, and written and oral communication. A team player who takes initiative and is willing to learn more at every place of employment since I am cognizant about the fact that no one knows everything and no one is an island.</p>
+
+                    <h4 class="mt-2 mb-2 text-center">Coding Experience</h4>
+                    <p class="lead mt-3 mb-3 text-center">I acquired skills in software engineering as I am being mentored by an expert in software engineering with 20+ years’ experience, in conjunction with his mentorship, I am self-educating myself in different coding languages such as C, C++, Python, HTML, CSS JavaScript as well as framework languages such as Bootstrap 5 and jQuery with clear guidance from said mentor.</p>
+                    <p class="lead mt-3 mb-3 text-center">I am good at implementing a mobile-first approach to existing websites. I can install and configure computer hardware, software, systems and printers. I can set up new users Accounts and proficient at testing new technology.</p>
+                    <p class="lead mt-3 mb-3 text-center">I can communicate effectively which helps at troubleshooting as it allows me to understand the problem at hand, isolating and diagnosing issues and then ultimately finding and implementing a fix.</p>
+
+                </div>
+
+            </div>
+
+
+        </div>
+
+    </section>
+
+
+    <!--Skills Section-->
+
+    <section id="skills" class="min-vh-100  bg-dark">
+
+        <div class="container">
+
+            <div class="row mb-3">
+
+                <div class="col-12 section-intro text-center">
+                    <h1 class="text-white">Artistic <span>Profile</span></h1>
+
+                    <div class="divider"></div>
+
+                    <p class="mt-3 lead">On top of my development skills, <br>I also offer artistic sklls as shown below:</p>
 
                 </div>
 
