--- a/index.html
+++ b/index.html
@@ -343,6 +343,32 @@
         </div>
 
     </section>
+
+
+    <!--Footer-->
+    <footer class="py-3">
+
+        <div class="container">
+  
+            <div class="row">
+                
+                <div class="col-md-6">
+                    <p class="mb-0">&copy; Copyright @ 2020 by Coding Rasta</p>
+                </div>
+  
+                <div class="col-md-6">
+                    <div class="social-links">
+                        <a href="https://github.com/Lwvzi" target="_blank"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://www.instagram.com/lwvziii_zxziii/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/asakhe-zozi-47411224b" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                    </div>
+                </div>
+  
+            </div>
+  
+        </div>
+  
+      </footer>
     
 
 
