--- a/info.html
+++ b/info.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href=".//css//style.css">
     <link rel="stylesheet" href=".//css//owl.carousel.min.css">
     <link rel="stylesheet" href=".//css//owl.theme.default.min.css">
-    <title>Document</title>
+    <title>Bio</title>
 </head>
 <body data-bs-spy="scroll" data-bs-target=".navbar">
 
